--- a/spring-batch-docs/asciidoc/testing.adoc
+++ b/spring-batch-docs/asciidoc/testing.adoc
@@ -103,18 +103,18 @@ public class SkipSampleFunctionalTests {
     @Autowired
     private JobLauncherTestUtils jobLauncherTestUtils;
 
-    private SimpleJdbcTemplate simpleJdbcTemplate;
+    private JdbcTemplate jdbcTemplate;
 
     @Autowired
     public void setDataSource(DataSource dataSource) {
-        this.simpleJdbcTemplate = new SimpleJdbcTemplate(dataSource);
+        this.jdbcTemplate = new JdbcTemplate(dataSource);
     }
 
     @Test
     public void testJob() throws Exception {
-        simpleJdbcTemplate.update("delete from CUSTOMER");
+        this.jdbcTemplate.update("delete from CUSTOMER");
         for (int i = 1; i <= 10; i++) {
-            simpleJdbcTemplate.update("insert into CUSTOMER values (?, 0, ?, 100000)",
+            this.jdbcTemplate.update("insert into CUSTOMER values (?, 0, ?, 100000)",
                                       i, "customer" + i);
         }
 
@@ -140,18 +140,18 @@ public class SkipSampleFunctionalTests {
     @Autowired
     private JobLauncherTestUtils jobLauncherTestUtils;
 
-    private SimpleJdbcTemplate simpleJdbcTemplate;
+    private JdbcTemplate jdbcTemplate;
 
     @Autowired
     public void setDataSource(DataSource dataSource) {
-        this.simpleJdbcTemplate = new SimpleJdbcTemplate(dataSource);
+        this.jdbcTemplate = new JdbcTemplate(dataSource);
     }
 
     @Test
     public void testJob() throws Exception {
-        simpleJdbcTemplate.update("delete from CUSTOMER");
+        this.jdbcTemplate.update("delete from CUSTOMER");
         for (int i = 1; i <= 10; i++) {
-            simpleJdbcTemplate.update("insert into CUSTOMER values (?, 0, ?, 100000)",
+            this.jdbcTemplate.update("insert into CUSTOMER values (?, 0, ?, 100000)",
                                       i, "customer" + i);
         }
 
