Fix minor example in job.adoc

--- a/spring-batch-docs/src/main/asciidoc/job.adoc
+++ b/spring-batch-docs/src/main/asciidoc/job.adoc
@@ -1607,7 +1607,8 @@ The following example shows a typical bean definition for `SimpleJobOperator` in
  @Bean
  public SimpleJobOperator jobOperator(JobExplorer jobExplorer,
                                 JobRepository jobRepository,
-                                JobRegistry jobRegistry) {
+                                JobRegistry jobRegistry,
+                                JobLauncher jobLauncher) {
 
 	SimpleJobOperator jobOperator = new SimpleJobOperator();
 
