--- a/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
+++ b/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
@@ -138,12 +138,9 @@ listing shows:
 ----
 CREATE TABLE BATCH_JOB_EXECUTION_PARAMS  (
 	JOB_EXECUTION_ID BIGINT NOT NULL ,
-	TYPE_CD VARCHAR(6) NOT NULL ,
-	KEY_NAME VARCHAR(100) NOT NULL ,
-	STRING_VAL VARCHAR(250) ,
-	DATE_VAL DATETIME DEFAULT NULL ,
-	LONG_VAL BIGINT ,
-	DOUBLE_VAL DOUBLE PRECISION ,
+	NAME VARCHAR(100) NOT NULL ,
+	TYPE VARCHAR(100) NOT NULL ,
+	VALUE VARCHAR(2500) ,
 	IDENTIFYING CHAR(1) NOT NULL ,
 	constraint JOB_EXEC_PARAMS_FK foreign key (JOB_EXECUTION_ID)
 	references BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
@@ -157,11 +154,9 @@ job execution to which the parameter entry belongs. Note that multiple rows (tha
 key/value pairs) may exist for each execution.
 * TYPE_CD: String representation of the type of value stored, which can be a string, a
 date, a long, or a double. Because the type must be known, it cannot be null.
-* KEY_NAME: The parameter key.
-* STRING_VAL: Parameter value if the type is string.
-* DATE_VAL: Parameter value if the type is date.
-* LONG_VAL: Parameter value if the type is long.
-* DOUBLE_VAL: Parameter value if the type is double.
+* NAME: The parameter name.
+* TYPE: The fully qualified name of the type of the parameter.
+* VALUE: Parameter value
 * IDENTIFYING: Flag indicating whether the parameter contributed to the identity of the
 related `JobInstance`.
 
